# Xiaozhi-AI-Speaker

./: .gitignore  CLAUDE.md  README.md  partitions.csv  proxy_server.py  sdkconfig.defaults.esp32s3  使用说明.md
local_server/: __init__.py  config.py  intent_router.py  pipeline.py  quiz_engine.py  search.py
local_server/asr/: __init__.py  baidu.py  base.py  openai_whisper.py  volcengine.py
local_server/llm/: __init__.py  base.py  openai_compat.py
local_server/tts/: __init__.py  baidu.py  base.py  edge_tts.py  volcengine.py
main/: CMakeLists.txt  README.md  audio_manager.cc  audio_manager.h  bsp_board.cc  bsp_board.h  cJSON_stub.cpp  idf_component.yml  main.cc  websocket_client.cc  websocket_client.h  wifi_manager.cc
main/mock_voices/: AUDIO_STANDARD.md  audio_toolkit.py
